# interview_01_pyb

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  client.cpp  server.cpp
.github/workflows/: static.yml
client/: CMakeLists.txt  main.cpp
client/include/: client.h
client/src/: client.cpp
server/: CMakeLists.txt  main.cpp
server/include/: server.h
server/src/: server.cpp
